[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xp-pipeline-tools"
version = "0.1.0a2"
description = "Multi-entrypoint pipeline tools distribution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
buddingScripts = "buddingScripts.__main__:main"
YuLabDataAllocator = "YuLabDataAllocator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["buddingScripts*", "YuLabDataAllocator*"]
